force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/tc9_ext_recon__Temp_Reconciliation__c.object-meta.xml
<CustomObject>
    <description>Reconciliation object which is the parent object to the Reconciliation Item object and holds all of the details around the reconciliation job</description>
    <label>Reconciliation</label>
    <nameField>
        <displayFormat>TREC-{0000000000}</displayFormat>
        <label>Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>