force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Batch_ID__c</fullName>
    <description>Defines the ID of the reconciliation batch job to assist with monitoring job status</description>
    <inlineHelpText>Defines the ID of the reconciliation batch job to assist with monitoring job status</inlineHelpText>
    <label>Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>