force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Custom_Date_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Custom_Date_From__c</fullName>
    <description>If Custom Date is selected in the period field, this field will define what the From date is</description>
    <inlineHelpText>If Custom Date is selected in the period field, this field will define what the From date is</inlineHelpText>
    <label>Custom Date From</label>
    <type>Date</type>
</CustomField>