force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Protects the reconciliation records from deletion</description>
    <inlineHelpText>Protects the reconciliation records from deletion</inlineHelpText>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>