force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Excluded_Payees__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Excluded_Payees__c</fullName>
    <description>Defines how many Payees have been skipped due to their Payee Reconciliation Status set to Not Required</description>
    <inlineHelpText>Defines how many Payees have been skipped due to their Payee Reconciliation Status set to Not Required</inlineHelpText>
    <label>Excluded Payees</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>