force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_FY_Year__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_FY_Year__c</fullName>
    <description>Defines the financial year ending for the period</description>
    <inlineHelpText>Defines the financial year ending for the period</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>