force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Payment_Entity__c</fullName>
    <description>Defines which payment entity this reconciliation event is assessing. Maximum 10 entities can be selected.</description>
    <inlineHelpText>Defines which payment entity this reconciliation event is assessing. Maximum 10 entities can be selected.</inlineHelpText>
    <label>Payment Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>