force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Period__c</fullName>
    <description>Defines which period should be considered for this reconciliation job</description>
    <inlineHelpText>Defines which period should be considered for this reconciliation job</inlineHelpText>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_ext_recon__Temp_Reconciliation_Period_Picklists</valueSetName>
    </valueSet>
</CustomField>