force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Reconcile_Failure__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Reconcile_Failure__c</fullName>
    <description>Defines how many payees failed to reconcile in this batch job</description>
    <inlineHelpText>Defines how many payees failed to reconcile in this batch job</inlineHelpText>
    <label>Reconcile Failure</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>