force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Reconcile_Payees__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Reconcile_Payees__c</fullName>
    <description>Defines which payees should be considered in the reconciliation process</description>
    <inlineHelpText>Defines which payees should be considered in the reconciliation process</inlineHelpText>
    <label>Reconcile Payees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_ext_recon__Temp_Reconcile_Payees_Picklists</valueSetName>
    </valueSet>
</CustomField>