force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Reconcile_Success__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Reconcile_Success__c</fullName>
    <description>Defines how many payees were successfully reconciled in this job</description>
    <inlineHelpText>Defines how many payees were successfully reconciled in this job</inlineHelpText>
    <label>Reconcile Success</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>