force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/fields/tc9_ext_recon__Temp_Run_Source__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Run_Source__c</fullName>
    <description>Defines where this batch job was initiated from</description>
    <inlineHelpText>Defines where this batch job was initiated from</inlineHelpText>
    <label>Run Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>