force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/recordTypes/tc9_ext_recon__Payroll.recordType-meta.xml
<RecordType>
    <fullName>tc9_ext_recon__Payroll</fullName>
    <active>true</active>
    <description>Used to define the parent Payroll Reconciliation record type.</description>
    <label>Payroll</label>
</RecordType>