force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation__c/listViews/tc9_ext_recon__All.listView-meta.xml
<ListView>
    <fullName>tc9_ext_recon__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_ext_recon__Temp_Payment_Entity__c</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Success__c</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Failure__c</columns>
    <columns>tc9_ext_recon__Temp_Excluded_Payees__c</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Payees__c</columns>
    <columns>tc9_ext_recon__Temp_Period__c</columns>
    <columns>tc9_ext_recon__Temp_FY_Year__c</columns>
    <columns>tc9_ext_recon__Temp_Custom_Date_From__c</columns>
    <columns>tc9_ext_recon__Temp_Custom_Date_To__c</columns>
    <columns>tc9_ext_recon__Temp_Do_Not_Delete__c</columns>
    <columns>tc9_ext_recon__Temp_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>